# ctx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
ctx/: __init__.py  cli.py  tui.py
ctx/analyzers/: __init__.py  architecture.py  ask.py  deps.py  extras.py
ctx/output/: __init__.py  export.py  terminal.py
ctx/scanner/: __init__.py  env.py  filesystem.py  git_info.py  ignore.py  packages.py
tests/: test_ctx.py
