[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fswitch-ctx"
version = "0.1.1"
description = "Understand any codebase in 10 seconds."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bijaya Chauhan" },
]
keywords = [
    "codebase",
    "context",
    "ai",
    "architecture",
    "developer-tools",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.27.0",
    "rich>=15.0.0",
    "gitpython>=3.1.50",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "textual>=0.70.0",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
ctx = "ctx.cli:_cli_entry"

[project.urls]
Homepage = "https://github.com/Biya-dev/ctx"
Repository = "https://github.com/Biya-dev/ctx"
Issues = "https://github.com/Biya-dev/ctx/issues"

[tool.hatch.build.targets.wheel]
packages = ["ctx"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
